<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_donate" tools:context=".activities.Donate">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/donateTitle"
        android:id="@+id/donateTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/donateSubtitle"
        android:id="@+id/donateSubtitle"
        android:layout_below="@+id/donateTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/donateTitle" />

    <Button
        android:id="@+id/donateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:onClick="donateButtonPressed"
        android:text="@string/donateButton" />

    <RadioGroup
        android:id="@+id/paymentMethod"
        android:layout_width="263dp"
        android:layout_height="174dp"
        android:layout_above="@+id/progressBar"
        android:layout_below="@+id/donateSubtitle"
        android:layout_alignParentStart="true"


        android:layout_marginBottom="153dp"
        android:layout_toStartOf="@+id/amountPicker">

        <RadioButton
            android:id="@+id/PayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/paypal" />

        <RadioButton
            android:id="@+id/Direct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/direct" />

    </RadioGroup>

    <NumberPicker
        android:id="@+id/amountPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/donateSubtitle" />


    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


    <EditText
        android:id="@+id/paymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar"

        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="24dp"
        android:layout_toEndOf="@+id/amount"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/donateButton"
        android:layout_alignEnd="@+id/donateSubtitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="-2dp"

        android:indeterminate="false" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="30dp"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalSoFar"
        android:layout_width="193dp"
        android:layout_height="34dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="22dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/totalSoFar"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>